fix: 런타임 에러 수정